# Inventory-Agent

./: README.md
inventory/: pyproject.toml
inventory/src/: .env
inventory/src/inventory/: main.py
