[project]
name = "inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed-malik", email = "159722798+ahmed22138@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.2.8",
]

[project.scripts]
inventory = "inventory:main"
main = "inventory.main:start"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
